--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ body {
 
 img {
     width: 100%;
-    height: 100%;
+    height: auto;
+    max-width: 100%;
     image-rendering: pixelated;
 }
 
