--- a/style.css
+++ b/style.css
@@ -206,6 +206,12 @@ main {
     border: 2px solid #323232;
 }
 
+#main-image-container iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
 #main-image {
     width: 100%;
     height: 100%;
@@ -273,8 +279,8 @@ main {
     }
 
     #main-image-container {
-        width: 250px;
-        height: 150px;
+        width: 250px; /* Half the original width */
+        height: 150px; /* Half the original height */
         max-width: 250px; 
         max-height: 150px;
         overflow: hidden;
