--- a/style.css
+++ b/style.css
@@ -206,10 +206,11 @@ main {
     border: 2px solid #323232;
 }
 
-#main-image-container iframe {
+#main-image-container video,
+#main-image-container img {
     width: 100%;
     height: 100%;
-    border: none;
+    object-fit: contain;
 }
 
 #main-image {
@@ -231,6 +232,13 @@ main {
     cursor: pointer;
     border: 2px solid #323232;
     transition: transform 0.3s ease, border-color 0.3s ease;
+}
+
+.thumbnail img,
+.thumbnail video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .thumbnail:hover {
