--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ main {
 .thumbnail video {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: scale-down;
 }
 
 .thumbnail:hover {
